# MatrixGraph

./: CMakeLists.txt  MakeFile
include/: graph.h  tests.h
input/: edges.txt
output/: matriFromMatrix.txt  matrix.txt  out.txt
src/: graph.c  main.c  tests.c
